--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@
 /conf/bootstrap.before.php
 /conf/bootstrap.after.php
 /applications/vanillaforumscom
+/applications/vfcom
+/applications/vforg
 *.kpf
 .DS_Store
 *.swp
